--- a/src/css/style.css
+++ b/src/css/style.css
@@ -40,7 +40,7 @@ nav {
     display: flex;
     gap: 15px;
     font-size: 1.15rem;
-    flex-flow: column; /* Adicione esta linha para garantir que os links estejam em coluna no mobile */
+    flex-flow: column;
     opacity: 0;
     max-height: 0;
     overflow: hidden;
@@ -49,12 +49,19 @@ nav {
 
 .nav-links-visible {
     opacity: 1;
-    max-height: 500px; /* Ajuste conforme necessário */
+    max-height: 500px; 
 }
 
 .menu-icon {
     display: none;
-    cursor: pointer; /* Adicione isso para tornar o ícone clicável */
+    cursor: pointer; 
+    text-shadow: 0px 0px rgba(0, 0, 0, 0);
+    transition: text-shadow .5s ease;
+}
+
+.menu-icon:hover{
+    text-shadow: 2px 2px rgba(49, 48, 48, 0.342);
+    transition: all .4s ease;
 }
 
 a {
@@ -198,6 +205,8 @@ section, .about {
 
     .menu-icon {
         display: flex;
+        margin-top: 5px;
+        font-size: 1.5em;
     }
 
     h1 {
