--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,8 +24,11 @@ body {
 
 header {
     width: 100%;
-    background-color: var(--cor-5);
+    background-image: linear-gradient(120deg, #c68863, #db7c7c);
     color: #e2e2e2;
+    top: 0;
+    left: 0;
+    box-shadow: 5px 0px 4px rgba(201, 201, 201, 0.865);
 }
 
 nav {
@@ -69,8 +72,9 @@ a {
     color: #e2e2e2;
 }
 
-a:hover {
+a:hover{
     text-decoration: underline 1.5px #c9ac91;
+
 }
 
 .img-g {
