--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,12 +1,25 @@
+@charset "UTF-8";
+
+@font-face{
+    font-family: 'raleway';
+    src: url('../fontes/Raleway_font/Raleway-VariableFont_wght.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'lato';
+    src: url('../fontes/Lato_font/Lato-Bold.ttf') format('truetype');
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/*Cores*/
-
 :root {
+
+    /*Cores*/
+
     --cor-1: #302520;
     --cor-2: #6a7791;
     --cor-3: #514c53;
@@ -17,11 +30,14 @@
     --cor-8: #607b99;
     --cor-9: #89573f;
     --cor-10: #2e3b42;
+
+    --font1: 'raleway';
+    --font2: 'lato';
 }
 
 body {
     width: 100%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: var(--font1);
 }
 
 header {
@@ -33,12 +49,18 @@ header {
     box-shadow: 5px 0px 4px rgba(201, 201, 201, 0.865);
 }
 
+
 nav {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 20px;
+    padding: 15px;
+}
+
+.nav-title{
+    font-family: var(--font2), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.1em;
 }
 
 .nav-links {
@@ -72,9 +94,12 @@ nav {
 a {
     text-decoration: none;
     color: #e2e2e2;
+    text-decoration: none;
+    transition: all ease;
 }
 
 a:hover{
+    color: #c8c7d6;
     text-decoration: underline 1.5px #c9ac91;
 
 }
@@ -82,22 +107,28 @@ a:hover{
 .img-g {
     display: flex;
     flex-flow: column;
-    align-items: flex-start;
-    justify-content: flex-end;
-    height: 430px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    height: 500px;
     background-image: url('../imagens/inicial-photo-new.jpg');
     background-size: cover;
     background-position: bottom center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    box-shadow: inset 0px -10px 5px rgba(0, 0, 0, 0.486);
+    box-shadow: inset 0px -10px 5px rgba(0, 0, 0, 0.13);
 }
 
-.img-g .item {
-    color: rgb(248, 140, 98);
-    text-shadow: 2px -2px rgba(0, 0, 0, 0.267);
-    padding: 50px;
-    font-size: 0.8em;
+.img-g .slogan {
+    color: rgb(255, 255, 255);
+    text-shadow: 2px -2px rgba(95, 95, 95, 0.267);
+    padding: 30px;
+    background-color: rgba(133, 133, 133, 0.658);
+    
+}
+
+.img-g .slogan h2{
+    text-align: center;
 }
 
 section, .about {
@@ -151,7 +182,7 @@ section, .about {
 }
 
 .location {
-    background-color: var(--cor-7);
+    background-color: #4a342c;
     display: flex;
     flex-flow: row wrap;
     align-items: center;
@@ -167,6 +198,7 @@ section, .about {
     color: var(--cor-9);
     font-size: 1.8em;
     padding: 10px;
+    text-align: center;
 }
 
 .location-text p {
@@ -256,6 +288,24 @@ input[type="submit"]{
     cursor: pointer;
 }
 
+footer{
+    padding: 10px;
+    background-color: #1c1c1c;
+    color: aliceblue;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: stretch;
+    justify-content: space-evenly;
+}
+
+.social-media{
+    font-family: var(--font2);
+    list-style-type: none;
+    display: flex;
+    justify-content: space-around;
+    padding: 5px;
+}
+
 @media (min-width: 768px) {
     .nav-links {
         display: flex !important;
@@ -264,8 +314,13 @@ input[type="submit"]{
         max-height: none;
     }
 
+
     .img-g {
-        height: 500px;
+        align-items: center;
+        height: 585px;
+        font-size: 1.3em;
+        text-align: center;
+        background-color: #e2e2e2;
     }
 
     .about-item {
