please ignore oldStyle

--- a/src/css/oldStyle.css
+++ b/src/css/oldStyle.css
@@ -1,9 +1,5 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&family=Poppins:wght@400;600&display=swap');
-
-
-
 @font-face{
     font-family: 'raleway';
     src: url('../fontes/Raleway_font/Raleway-VariableFont_wght.ttf') format('truetype');
@@ -14,7 +10,12 @@
     src: url('../fontes/Lato_font/Lato-Bold.ttf') format('truetype');
 }
 
-/*  Inútil  */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root {
 
     /*Cores*/
@@ -30,24 +31,13 @@
     --cor-9: #89573f;
     --cor-10: #2e3b42;
 
-    --mont : 'Montserrat', sans-serif;
-    --raleway: 'raleway', sans-serif;
-    --lato: 'lato', sans-serif;
-    --pops: 'Poppins', sans-serif;
-    --well: 'Playfair Display', serif;
-    
+    --font1: 'raleway';
+    --font2: 'lato';
 }
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 
 body {
     width: 100%;
-    font-family: var(--lato);
+    font-family: var(--font1);
 }
 
 header {
@@ -57,10 +47,8 @@ header {
     color: #e2e2e2;
     top: 0;
     left: 0;
-    font-family: var(--mont);
     box-shadow: 5px 0px 4px rgba(201, 201, 201, 0.865);
     animation: bg-color 5s ease infinite;
-
 }
 
 @keyframes bg-color {
@@ -86,21 +74,22 @@ nav {
 }
 
 .nav-title{
-    font-family: sans-serif;
-    font-size: 1em;
+    font-family: var(--font2), system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 1.1em;
 }
 
 .nav-links {
     display: flex;
     gap: 15px;
     font-size: 1.15rem;
-    flex-flow: row;
-    opacity: 1;
+    flex-flow: column;
+    opacity: 0;
+    max-height: 0;
     overflow: hidden;
     transition: all 0.5s ease-in-out;
 }
 
-.active {
+.nav-links-visible {
     opacity: 1;
     max-height: 500px; 
 }
@@ -146,7 +135,7 @@ a:hover{
 }
 
 .img-g > .slogan {
-    font-family: var(--well);
+    font-family: var(--font1);
     color: rgb(255, 255, 255);
     text-shadow: 2px -2px rgba(95, 95, 95, 0.267);
     padding: 30px;
@@ -154,19 +143,23 @@ a:hover{
     
 }
 
-section, .about {
+.img-g .slogan h2{
+    text-align: center;
+}
+
+
+section{
     width: 100%;
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: justify;
-
 }
 
 .about-item {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin: 20px 0;
@@ -176,17 +169,11 @@ section, .about {
     flex-direction: column-reverse;
 }
 
-.about-text h1{
-    color: #2f3436;
-}
-
 .about-text, .reserve-title-div {
-    font-family: var(--pops);
     max-width: 600px;
     padding: 10px;
     font-size: 1.3em;
 }
-
 
 section#reserve{
     background-color: #1c1c1c;
@@ -263,7 +250,6 @@ section#reserve{
 }
 
 .location-text p {
-    font-family: var(--pops);
     color: white;
     text-align: justify;
     font-size: 1.2em;
@@ -471,195 +457,106 @@ footer small a:hover {
     text-decoration: underline;
 }
 
-/* Media Queries - Tablets */
-@media (min-width: 768px) and (max-width: 1024px) {
-    
+/*  Media Queries */
+@media (min-width: 768px) {
     .nav-links {
-        display: flex;
-        flex-direction: row;
-        font-size: 1.2rem;
+        display: flex !important;
+        flex-flow: row;
         opacity: 1;
         max-height: none;
     }
 
-    .menu-icon {
-        display: none; /* Esconder o ícone do menu em tablets */
-    }
-
     .img-g {
         align-items: center;
-        height: 500px;
-        font-size: 1.2em;
+        height: 585px;
+        font-size: 1.3em;
+        text-align: center;
+        background-color: #e2e2e2;
     }
 
     .about-item {
         flex-direction: row;
-        justify-content: space-between;
+        flex-wrap: wrap;
     }
 
     .about-item:nth-child(even) {
         flex-direction: row-reverse;
     }
 
-    .about-text, .reserve-title-div {
-        font-size: 1.2em;
-        max-width: 800px;
-    }
-
-    .rooms {
-        flex-direction: row;
-        justify-content: space-around;
-    }
-
-    .rooms label, .rooms h2 {
-        font-size: 1.4em;
-    }
-
-    .rooms select, .rooms input[type="date"], .rooms input[type="submit"] {
-        width: 80%; /* Aumentar a largura dos inputs no tablet */
-    }
-
-    .location-text h2 {
-        font-size: 1.8em;
-    }
-
-    .location-text p {
-        font-size: 1.1em;
-    }
-
-    footer {
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 20px;
-    }
-
-    .footer-item {
-        flex: 1 1 45%;
-        text-align: left;
-    }
-
-    .social-media {
-        justify-content: flex-start;
-    }
+    
 }
 
-/* Media Queries - Dispositivos móveis */
 @media (max-width: 768px) {
-
     nav {
-        justify-content: space-between;
-        align-items: center;
-
+        flex-direction: column;
     }
 
     .menu-icon {
         display: flex;
-        font-size: 2em;
-        color: white;
-        text-align: right;
+        margin-top: 5px;
+        font-size: 1.5em;
     }
 
-    .nav-links {
-        display: flex; /* Mudei para 'flex' para controle de layout */
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        position: absolute;
-        top: 0;
-        right: -100%; /* Posicionado fora da tela inicialmente */
-        height: 100dvh;
-        width: 70%; /* Menu ocupa 70% da largura da tela */
-        background-color: rgba(47, 52, 54, 0.8); /* Cor de fundo com transparência */
-        -webkit-backdrop-filter: blur(10px);
-        backdrop-filter: blur(10px); /* Adiciona um efeito de desfoque de fundo */
-        padding: 80px 20px; /* Espaçamento interno */
-        font-size: 1.1em;
-        gap: 30px; /* Espaçamento entre os itens do menu */
-        box-shadow: -4px 0 15px rgba(0, 0, 0, 0.1); /* Sombra para dar profundidade */
-        transform: translateX(100%); /* Move o menu para fora da tela à direita */
-        transition: transform 0.5s ease-out, background-color 0.3s ease; /* Transição suave */
-    }
-    
-    .active{
-        position: absolute;
-        background-color: #2f34365c;
-        background-size: 300% 300%;
-        top: 100%;
-        right: 0;
-        height: 100dvh;
-        width: 100%;
-        padding: 100px;
-        font-size: 1.1em;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: flex-start;
-        gap: 50px;
-        transform: translateX(0);
-
-    }
-    
-    .nav-links a {
-        color: white;
-        text-decoration: none;
-        font-weight: bold;
-        transition: color 0.3s ease;
-    }
-    
-    .nav-links a:hover {
-        color: var(--cor-3); /* Cor de destaque no hover */
+    h1 {
+        font-size: 1.5em;
     }
 
-    .img-g {
-        align-items: center;
-        height: 400px;
-    }
-
-    .about-item {
+    .location {
         flex-direction: column;
     }
 
-    .about-item:nth-child(even) {
-        flex-direction: column;
+    .responsive-iframe {
+        height: 300px;
     }
 
-    .about-text, .reserve-title-div {
-        font-size: 1em;
-        max-width: 100%;
-    }
-
-    .rooms {
+    form {
         flex-direction: column;
         gap: 10px;
     }
 
-    .rooms label, .rooms h2 {
-        font-size: 1.2em;
+    .form-item {
+        flex: 1 1 100%;
+    }
+
+    .rooms {
+        flex-direction: column; /* Stack items on top of each other */
+    }
+
+    .rooms div h2{
+        font-size: 2em;
     }
 
     .rooms select, .rooms input[type="date"], .rooms input[type="submit"] {
-        width: 100%;
-    }
-
-    .location-text h2 {
-        font-size: 1.5em;
-    }
-
-    .location-text p {
-        font-size: 1em;
+        width: 100%; /* Full width for small screens */
+        margin-bottom: 15px;
     }
 
     footer {
         flex-direction: column;
-        padding: 10px;
+        align-items: center;
     }
 
     .footer-item {
-        flex: none;
+        align-items: center;
         text-align: center;
+    }
+
+    .footer-logo, .footer-contact, .social-media {
+        align-items: center;
     }
 
     .social-media {
         justify-content: center;
+    }
+}
+
+@media (min-width: 1024px) {
+    h1 {
+        font-size: 2em;
+    }
+
+    .img-g .item {
+        font-size: 1em;
+        padding: 50px;
     }
 }
