--- a/src/css/style.css
+++ b/src/css/style.css
@@ -118,7 +118,6 @@ nav {
 }
 
 a {
-    text-decoration: none;
     color: #e2e2e2;
     text-decoration: none;
     transition: all ease;
@@ -199,6 +198,7 @@ section#reserve{
     justify-content: space-evenly;
     align-items: center;
     gap: 20px;
+   
 }
 
 .rooms label, .rooms h2{
@@ -637,6 +637,10 @@ footer small a:hover {
     .rooms label, .rooms h2 {
         text-align: center;
         font-size: 1.5em;
+    }
+
+    .rooms input[type="date"]::-moz-placeholder{
+        content: 'dd/mm/aaaa';
     }
 
     .rooms label, .rooms select, .rooms input[type="date"], .rooms input[type="submit"] {
