--- a/src/css/style.css
+++ b/src/css/style.css
@@ -629,11 +629,11 @@ footer small a:hover {
     .about-item {
         flex-direction: column;
     }
-
-    .about-item:nth-child(even) {
+ /*
+   .about-item:nth-child(even) {
         flex-direction: column;
     }
-
+*/
     .about-text, .reserve-title-div {
         font-size: 1em;
         max-width: 100%;
