css cursor update

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -271,6 +271,7 @@ section, .about {
 
 .facil-item i:hover{
     font-size: 4rem;
+    cursor: pointer;
     margin-bottom: 10px;
     color: #ef9f70;
     transition: all 0.7s ease;
